--- a/BTS_5/bts.5.1.html
+++ b/BTS_5/bts.5.1.html
@@ -90,11 +90,11 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2 class = "text-dark">Tagliatelle alle ossa umane<span class="badge badge-secondary">New</span></h2>
-      <h5 class = "text-warning">prodotti: ossa umane</h5>
-      <div class="fakeimg">Ossa Umane</div>
-      <p class = "text-secondary">clavicole e femore..</p>
-      <p class = "text-info">cuocere a fuoco lento le clavicole, bollire i femori</p>
+      <h2 class = "text-dark">Tagliatelle al ragu'<span class="badge badge-secondary">New</span></h2>
+      <h5 class = "text-warning">prodotti: ragu'</h5>
+      <div class="fakeimg">vino</div>
+      <p class = "text-secondary">sale</p>
+      <p class = "text-info">cuocere a fuoco lento la pasta, bollire i vini</p>
       <br>
       <h2>risotto al sanguinaccio</h2>
       <h5>prodotti: zucchero, cacao amaro, farina, sangue di maiale, vino cotto, cioccolato fondente, grasso di maiale, cedro, noci spezzate, vaniglia,cannella,rum</h5>
